--- a/src/main/webapp/css/user.css
+++ b/src/main/webapp/css/user.css
@@ -1,5 +1,24 @@
 @charset "UTF-8";
 
+.card-personal {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  margin: 0 auto;
+}
+
+.card-personal:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
+
+.container {
+  padding: 2px 16px;
+}
+
 .messages-icon{
 	width:4%;
 	float: left;
@@ -16,6 +35,7 @@ body{
 }
 .card {
     box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+    margin: 0 auto;
 }
 
 .card {
