--- a/src/main/webapp/css/user.css
+++ b/src/main/webapp/css/user.css
@@ -1,5 +1,16 @@
 @charset "UTF-8";
 
+.thumb{
+  border: 1px solid #ddd; /* Gray border */
+  border-radius: 4px;  /* Rounded border */
+  padding: 5px; /* Some padding */
+  width: 150px; /* Set a small width */
+}
+
+/* Add a hover effect (blue shadow) */
+.thumb:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
 
 input#file {
   display: inline-block;
