--- a/src/main/webapp/css/user.css
+++ b/src/main/webapp/css/user.css
@@ -1,10 +1,17 @@
 @charset "UTF-8";
 
+p.ex1 {
+  border: 1px solid red; 
+  padding-right: 10px;
+  float:right;
+}
+
 .thumb{
   border: 1px solid #ddd; /* Gray border */
   border-radius: 4px;  /* Rounded border */
   padding: 5px; /* Some padding */
-  width: 150px; /* Set a small width */
+  width: 100px; /* Set a small width */
+  height: 100px; 
 }
 
 /* Add a hover effect (blue shadow) */
