--- a/src/main/webapp/css/user.css
+++ b/src/main/webapp/css/user.css
@@ -1,6 +1,18 @@
 @charset "UTF-8";
 
 
+textarea {
+	width: 100%;
+	resize: none;
+    padding: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
+    line-height: 1.5;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 1px #999;
+}
+
 .thumb{
   border: 1px solid #ddd; /* Gray border */
   border-radius: 4px;  /* Rounded border */
