--- a/src/main/webapp/css/store.css
+++ b/src/main/webapp/css/store.css
@@ -12,6 +12,8 @@ body {
   font: 400 15px Lato, sans-serif;
   line-height: 1.8;
   color: rgb(136, 17, 0);
+  background-image: url("../resources/Free-Wood-Texture-1.jpg");
+  background-size: cover;
 }
 
 a {
@@ -99,11 +101,79 @@ a {
 .shop-items {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .btn {
   text-align: center;
   vertical-align: middle;
   padding: 0.67em 0.67em;
   cursor: pointer;
+}
+
+.cart-header {
+  font-weight: bold;
+  font-size: 1.2em;
+  color: #333;
+}
+
+.cart-column {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid black;
+  margin-right: 1.5em;
+  padding-bottom: 10px;
+  margin-top: 10px;
+}
+.cart-row {
+  display: flex;
+}
+.cart-item {
+  width: 45%;
+}
+.cart-length.cart-column.input {
+  margin-left: 20%;
+  padding: auto;
+}
+.cart-quantity.cart-column.input {
+  padding: auto;
+  justify-content: space-between;
+}
+
+.cart-length {
+  width: 20%;
+  padding-left: 2%;
+}
+.cart-quantity {
+  width: 35%;
+}
+.cart-item-title {
+  color: #333;
+  margin-left: 0.5em;
+  font-size: 1.2em;
+}
+.cart-item-image {
+  width: 75px;
+  height: auto;
+}
+.cart-input {
+  height: 34px;
+  width: 75px;
+  border: 1px solid #56ccf2;
+  background-color: #eee;
+  color: #333;
+  padding: 0;
+  text-align: center;
+  font-size: 1.2em;
+  margin-right: 25px;
+}
+.cart-row:last-child {
+  border-bottom: 1px solid black;
+}
+.cart-row:last-child .cart-column {
+  border: none;
+}
+.btn-purchase {
+  display: block;
+  margin: 40px auto 80px auto;
+  font-size: 1.5em;
 }
