--- a/src/main/webapp/css/user.css
+++ b/src/main/webapp/css/user.css
@@ -1,10 +1,18 @@
 @charset "UTF-8";
 
+.Table{
+    width: 100%;
+    table-layout: fixed;
+}
+
+th{
+    width: 100%;
+    text-align: center;
+}
 
 .msg-form{
 	
-	width:100%;
-	
+	width:100%;	
 }
 
 textarea {
