added separating line

--- a/src/main/webapp/css/user.css
+++ b/src/main/webapp/css/user.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+.separator{
+	height:2px;
+	border-width:0;
+	background-color:gray;
+}
+
+
 .Table{
     width: 100%;
     table-layout: fixed;
