--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,10 +1,33 @@
 @charset "UTF-8";
 
-  body {
+.vl {
+  border-left: 1px solid grey;
+  height: 500px;
+  position: absolute;
+  left: 85.3%;
+  margin-left: -3px;
+  bottom: 0;
+}
+
+#content{
+    height:100%;
+    width: 85%;
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+}
+
+#right-advertisement {
+    float: left;
+    width: 100%;
+    color: #92badd;
+}
+
+  /*body {
     font: 400 15px Lato, sans-serif;
     line-height: 1.8;
     color: rgb(136, 17, 0);
   }
+  */
   h2 {
     font-size: 24px;
     text-transform: uppercase;
