--- a/src/main/webapp/css/user.css
+++ b/src/main/webapp/css/user.css
@@ -1,5 +1,17 @@
 @charset "UTF-8";
 
+
+.close {
+  cursor: pointer; 
+  position: absolute;
+  padding: 12px 16px;  
+  transform: translate(0%, -50%);  
+}
+
+
+.close:hover {background: #bbb;}
+
+
 .image{
 	width: 50px;
 	height:50px;
