reply area for each message including images. bug: images added only to first image area

--- a/src/main/webapp/css/user.css
+++ b/src/main/webapp/css/user.css
@@ -1,5 +1,21 @@
 @charset "UTF-8";
 
+.upload-image /*label*/
+{
+	text-align: center;
+}
+
+.upload-image label
+{
+	text-align: center;
+	display: block;
+  	width: 100%;
+    cursor: pointer;
+	border: 2px solid rgb(192, 192, 192); 	/* Gray border */
+  	border-radius: 14px;  				/* Rounded border */
+  	float: center;
+  	background-color:#80ffff;
+}
 
 .close {
   cursor: pointer; 
@@ -61,7 +77,7 @@ textarea {
 .thumb:hover {
   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
 }
-
+/*
 input#file {
   display: inline-block;
   width: 100%;
@@ -75,7 +91,7 @@ input#file {
   border-radius: 20px;
   background-size: 60px 60px;
 }
-
+*/
 
 .container {
 	--parentWidth: 100%;
