--- a/src/main/webapp/css/user.css
+++ b/src/main/webapp/css/user.css
@@ -1,5 +1,22 @@
 @charset "UTF-8";
 
+.reply-to{
+  display: flex;
+  flex-direction: row;
+}
+.reply-to:before, .reply-to:after{
+  content: "";
+  flex: 1 1;
+  border-bottom: 1px solid;
+  margin: auto;
+}
+.reply-to:before {
+  margin-right: 10px
+}
+.reply-to:after {
+  margin-left: 10px
+}
+
 .upload-image /*label*/
 {
 	text-align: center;
