new order modal: chosen product added to order (displayed)

--- a/src/main/webapp/css/order.css
+++ b/src/main/webapp/css/order.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+
+.new-order-product:hover {
+	padding: 20px;
+  	border: 1px solid #888;
+	background-color: rgb(128, 255, 128); 
+}
+
 .modal {
   display: block; /* Hidden by default */
   position: fixed; /* Stay in place */
