chsen product added to list, in new order. need to work on UI design

--- a/src/main/webapp/css/order.css
+++ b/src/main/webapp/css/order.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+.new-order-product {
+	padding: 10px;
+  	border: 1px solid #888;
+	background-color: rgb(128, 255, 128); 
+}
 
 .new-order-product:hover {
 	padding: 20px;
