--- a/src/main/webapp/css/order.css
+++ b/src/main/webapp/css/order.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-.new-order-product {
+.order-product {
 	padding: 10px;
   	border: 1px solid #888;
 	background-color: rgb(128, 255, 128); 
