--- a/src/main/webapp/css/order.css
+++ b/src/main/webapp/css/order.css
@@ -1,22 +1,5 @@
 @charset "UTF-8";
 
-.dropbtn {
-  background-color: #3498DB;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
 
 .dropdown-content {
   display: none;
@@ -54,11 +37,11 @@
 }
 
 .order-product {
-	text-align: right;
-	padding: 10px;
+	/*text-align: center;
+	padding: 10px;*/
   	border: 1px solid #888;
   	border-radius: 5px;
-	/*background-color: rgb(128, 255, 128);*/ 
+	justify-content: space-evenly;
 }
 
 .new-order-product:hover {
