--- a/src/main/webapp/css/order.css
+++ b/src/main/webapp/css/order.css
@@ -1,5 +1,24 @@
 @charset "UTF-8";
 
+.block label { display: inline-block; width: 2 0%; text-align: left; }
+.block input{
+  -webkit-transition: all 0.30s ease-in-out;
+  transition: all 0.30s ease-in-out;
+  -moz-transition: all 0.30s ease-in-out;
+  -ms-transition: all 0.30s ease-in-out;
+  -o-transition: all 0.30s ease-in-out;
+  outline: none;
+  padding: 3px 0px 3px 3px;
+  float: right;
+  border: 1px solid #DDDDDD;
+  width: 70%;
+}
+
+.block input:focus {   box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+  padding: 3px 0px 3px 3px;
+  margin: 5px 1px 3px 0px;
+  border: 1px solid rgba(81, 203, 238, 1); 
+}
 
 .dropdown-content {
   display: none;
