--- a/src/main/webapp/css/order.css
+++ b/src/main/webapp/css/order.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
+.order-row:hover{
+	cursor: pointer;
+	background: rgba(81, 203, 238, 1);
+}
+
+
 .block label { display: inline-block; width: 2 0%; text-align: left; }
 .block input{
   -webkit-transition: all 0.30s ease-in-out;
